--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,5 @@ android.targetSdk=34
 android.minSdk=24
 
 #Versions
-kotlin.version=1.9.10
-agp.version=8.0.2
-compose.version=1.5.1
+kotlin.version=1.9.20-Beta
+compose.version=1.5.10-beta01
